# example_pkg

./: .gitignore  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
example_package/middle_package/subpackage_a/: __init__.py  test_a.py
